[project]
name = "username-permuter"
version = "0.1.0"
description = "Calculates permutations of a userlist to check for e.g. using Kerbrute"
authors = [
    {name = "Kevin",email = "18002263+Darth-Revan@users.noreply.github.com"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 120

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.0"
mypy = "^1.18.2"
isort = "^7.0.0"
pyinstaller = "^6.16.0"

